# my-microservice-project

./: .dockerignore  .env_example  .gitignore  README.md  docker-compose.yaml  install_dev_tools.sh  pyproject.toml
django_app/: Dockerfile
django_app/myDjango/: settings.py
lesson-5/: backend.tf  locals.tf  main.tf
lesson-5/ecr/: ecr.tf  outputs.tf
lesson-5/s3-backend/: dynamodb.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
lesson-5/vpc/: routes.tf  variables.tf  vpc.tf
lesson-7/: .env  locals.tf  main.tf  outputs.tf
lesson-7/charts/django-app/: values.yaml
lesson-7/django_app/: Dockerfile
lesson-7/django_app/myDjango/: settings.py
lesson-7/modules/eks/: variables.tf
lesson-7/modules/s3-backend/: outputs.tf
lesson-7/scripts/: deploy.sh
lesson-7/terraform/: locals.tf  main.tf
lesson-8-9/charts/django-app/: Chart.yaml  values.yaml
lesson-8-9/django_app/: .dockerignore  Dockerfile  pyproject.toml
lesson-8-9/django_app/myDjango/: settings.py
lesson-8-9/scripts/: delete-all-recourses.sh  delete-all.sh  deploy.sh  init-all.sh
lesson-8-9/terraform/: Jenkinsfile  backend.tf  locals.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
lesson-8-9/terraform/repo-clean.git/: config
my-microservice-project.git/: packed-refs
my-microservice-project.git/filter-repo/: changed-refs  commit-map  ref-map
my-microservice-project.git/objects/info/: commit-graph  packs
my-microservice-project.git/objects/pack/: pack-d2f39316c6224dfd775b8c434ad7bb9c483f87af.bitmap  pack-d2f39316c6224dfd775b8c434ad7bb9c483f87af.idx  (+2 more)
(+52 files in other folders)
