[tool.poetry]
name = "django-project"
version = "1"
description = ""
authors = ["ZorAnderius <gabriel.zorander@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
django = "^5.2.4"
psycopg = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
